[project]
name = "certbot-dns-admtools"
version = "0.1.0"
description = "adm.tools DNS Authenticator plugin for Certbot"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "certbot>=3.0.1",
    "setuptools>=75.3.0",
    "wheel>=0.45.1",
    "zope>=5.11.1",
]

authors = [
    { name = "Serhii Yalosovetskyi", email = "serg.yalosovetsky@gmail.com" }
]
license = { text = "Apache License 2.0" }
keywords = ["certbot", "dns", "admtools", "authenticator", "plugin"]
